--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,29 @@
-flask
-flask-cors
-flask-smorest
-python-dotenv
-sqlalchemy
-flask-sqlalchemy
-flask-jwt-extended
-bleach
+apispec==6.8.0
+bleach==6.2.0
+blinker==1.9.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
+click==8.1.8
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-JWT-Extended==4.7.1
+flask-smorest==0.45.0
+Flask-SQLAlchemy==3.1.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+marshmallow==3.23.2
+packaging==24.2
+PyJWT==2.10.1
+python-dotenv==1.0.1
+requests==2.32.3
+SQLAlchemy==2.0.36
+SQLAlchemy-ImageAttach==1.1.0
+tenacity==9.0.0
+typing_extensions==4.12.2
+urllib3==2.3.0
+Wand==0.6.13
+webargs==8.6.0
+webencodings==0.5.1
+Werkzeug==3.1.3
